kubernetes/overlays/staging/patches/tdi-ingress-patch.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tdi
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
    - hosts:
        - tdi-dev.inokufu.space
      secretName: staging-tdi-tls
  rules:
    - host: tdi-dev.inokufu.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tdi
                port:
                  name: http
